--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>My history</title>
         <meta charset="utf-8" />
     </head>
     <body>
-        This is Text <br />
-        <h1>This is a Heading</h1>
-        <h1 color="red">This is a Heading</h1>
-        <img src="com.png"/>
-        <p>This is a paragraph.</p>
+        <img src="อัตชีวประวัติ.png" width="100%"/>
+        <h1><b>ประวัติ</b></h1>
+        <p>การเดินทางนี้เริ่มจากการที่เราไปเที่ยวบ่อยมากและ
+            มีประสบการต่างๆที่อยากจะเก็บไว้เลยทำเว็บนี้ขึ้นมา
+            ถึงมันจะยังไม่เสร็จดีเพราะเราในอนาคตอาจจะไปเที่ยว
+            ที่อื่นๆเพิ่มเติมแต่นี้ก็เป็นจุดเริ่มต้นที่ไป</p>
+
+        <img src="13-15 ปี.png" width="50%"/>
+        <h1><b>13-15 ปี</b></h1>
+        <p></p>
+
+        <img src="16-18 ปี.png" width="50%"/>
+        <h1><b>16-18 ปี</b></h1>
+        <p></p>
+
+        <img src="19-20 ปี.png" width="50%"/>
+        <h1><b>19-20 ปี</b></h1>
+        <p></p>
+
 
     </body>
 </html>
