เปลี่ยนขนาดรูปภาพ

--- a/myprofile.html
+++ b/myprofile.html
@@ -16,13 +16,13 @@
 
         <div class="content">
             <!--เนื้อหาหลัก -->
-            <img src="โปรไฟล์.jpg">
+            <img src="โปรไฟล์.jpg" width="30%">
             <p>สวัสดีเราชื่อเอิงเป็นลูกคนที่2เราเรียนอยู่วิศวกรรมซอฟต์แวร์ที่วิทยาลัยบูรพา</p>
         </div>
 
         <div class="content">
             <!--เนื้อหาเที่ยว -->
-            <img src="อัตชีวประวัติ.png" width="100%"/>
+            <img src="อัตชีวประวัติ.png" width="50%"/>
             <h1><b>ประวัติ</b></h1>
             <p>การเดินทางนี้เริ่มจากการที่เราไปเที่ยวบ่อยมากและ
                 มีประสบการต่างๆที่อยากจะเก็บไว้เลยทำเว็บนี้ขึ้นมา
