--- a/myprofile.html
+++ b/myprofile.html
@@ -11,35 +11,36 @@
         <header>
             <!-- หัวข้อ -->
             <div class="head"></div>
-            <hi>My profile</h1>
+            <!--<hi>My profile</h1>-->
         </header>
 
         <div class="content">
             <!--เนื้อหาหลัก -->
-            <img src="โปรไฟล์.jpg" width="30%">
-            <p>สวัสดีเราชื่อเอิงเป็นลูกคนที่2เราเรียนอยู่วิศวกรรมซอฟต์แวร์ที่วิทยาลัยบูรพา</p>
+            <center><h1>My profile</h1></center>
+            <center><img src="โปรไฟล์.jpg" width="30%"></center>
+            <center><p>สวัสดีเราชื่อเอิงเป็นลูกคนที่2เราเรียนอยู่วิศวกรรมซอฟต์แวร์ที่วิทยาลัยบูรพา</p></center>
         </div>
 
         <div class="content">
             <!--เนื้อหาเที่ยว -->
-            <img src="อัตชีวประวัติ.png" width="50%"/>
-            <h1><b>ประวัติ</b></h1>
-            <p>การเดินทางนี้เริ่มจากการที่เราไปเที่ยวบ่อยมากและ
+            <center><img src="อัตชีวประวัติ.png" width="50%"/></center>
+            <center><h1><b>ประวัติ</b></h1></center>
+            <center><p>การเดินทางนี้เริ่มจากการที่เราไปเที่ยวบ่อยมากและ
                 มีประสบการต่างๆที่อยากจะเก็บไว้เลยทำเว็บนี้ขึ้นมา
                 ถึงมันจะยังไม่เสร็จดีเพราะเราในอนาคตอาจจะไปเที่ยว
-                ที่อื่นๆเพิ่มเติมแต่นี้ก็เป็นจุดเริ่มต้นที่ไป</p>
+                ที่อื่นๆเพิ่มเติมแต่นี้ก็เป็นจุดเริ่มต้นที่ไป</p></center>
 
-            <img src="13-15 ปี.png" width="50%"/>
-            <h1><b>13-15 ปี</b></h1>
-            <p></p>
+            <center><img src="13-15 ปี.png" width="50%"/></center>
+            <center><h1><b>13-15 ปี</b></h1></center>
+            <center><p></p></center>
 
-            <img src="16-18 ปี.png" width="50%"/>
-            <h1><b>16-18 ปี</b></h1>
-            <p></p>
+            <center><img src="16-18 ปี.png" width="50%"/></center>
+            <center><h1><b>16-18 ปี</b></h1></center>
+            <center><p></p></center>
 
-            <img src="19-20 ปี.png" width="50%"/>
-            <h1><b>19-20 ปี</b></h1>
-            <p></p>
+            <center><img src="19-20 ปี.png" width="50%"/></center>
+            <center><h1><b>19-20 ปี</b></h1></center>
+            <center><p></p></center>
 
         </div>
 
