--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <a href="https://www.google.com/" target="_self">Visit Google</a>
 
         <!--Images-->
-        <img src="img_girl.jpg" alt="Girl in a jacket"
+        <img src="วิว.jpg" alt="Girl in a jacket"
         style="width:500px;height:600px;" title="Girl in a jacket" />
        <figure>
-       <img src="img_girl.jpg" alt="Girl in a jacket"
+       <img src="วิว.jpg" alt="Girl in a jacket"
         style="width:500px;height:600px;" title="Girl in a jacket" />
        <br />
        <figcaption>Girl in a jacket</figcaption>
@@ -86,7 +86,7 @@
             </tr>
         </table>
         
-        <table>
+        <table border ="2" width="100%">
             <tr>
                 <th></th>
                 <th scope="col">Saturday</th>
@@ -104,7 +104,7 @@
             </tr>
         </table>
 
-        <table>
+        <table border ="2" width="100%">
             <tr>
                 <th></th>
                 <th>9am</th>
@@ -120,7 +120,7 @@
             </tr>
         </table>
 
-        <table>
+        <table border ="2" width="100%">
             <tr>
                 <th></th>
                 <th>ABC</th>
@@ -140,7 +140,7 @@
             </tr>
         </table>
 
-        <table>
+        <table border ="2" width="100%">
             <thead>
                 <tr>
                     <th>Date</th>
@@ -177,10 +177,102 @@
             </tfoot>
         </table>
 
+        <!--Input type=”text”-->
+        <form action="#">
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname">
+        </form>
 
+        <!--Input type=”password”-->
+        <form>
+            <label for="username">Username:</label>
+            <br>
+            <input type="text" id="username" name="username">
+            <br>
+            <label for="pass">Password:</label>
+            <br>
+            <input type="password" id="pass" name="password">
+        </form>
 
+        <!--Text area-->
+        <form>
+            <textarea rows="4" cols="40"></textarea>
+        </form>
 
-        
+        <!--Radio-->
+        <form>
+            <input type="radio" id="html" name="fav_language" value="HTML">
+            <label for="html">HTML</label><br>
+            <input type="radio" id="css" name="fav_language" value="CSS">
+            <label for="css">CSS</label><br>
+            <input type="radio" id="javascript" name="fav_language"
+           value="JavaScript">
+            <label for="javascript">JavaScript</label>
+        </form>
+
+        <!--Checkbox-->
+        <form>
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1"> I have a bike</label><br>
+            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+            <label for="vehicle2"> I have a car</label><br>
+            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+            <label for="vehicle3"> I have a boat</label>
+        </form>
+
+        <!--Select-->
+        <form>
+            <select id="cars" name="cars" size="3">
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="fiat">Fiat</option>
+            <option value="audi">Audi</option>
+            </select>
+        </form>
+
+        <!--Button-->
+        <form>
+            <input type="button" value="check me!"><br>
+            <input type="reset" value="Reset"><br>
+            <input type="submit" value="Submit"><br>
+            <br><br>
+            <button type="button">Click Me!</button><br>
+            <button type="reset">Reset</button><br>
+            <button type="submit">Submit</button><br>
+        </form>
+
+        <!--Input type=”file”-->
+        <form>
+            <label for="myfile">Select a file:</label>
+            <input type="file" id="myfile" name="myfile">
+        </form>
+
+        <!--HTML Input Types-->
+        <input type="button">
+        <input type="checkbox">
+        <input type="color">
+        <input type="date">
+        <input type="datetime-local">
+        <input type="email">
+        <input type="file">
+        <input type="hidden">
+        <input type="image">
+        <input type="month">
+        <input type="number">
+        <input type="password">
+        <input type="radio">
+        <input type="range">
+        <input type="reset">
+        <input type="search">
+        <input type="submit">
+        <input type="tel">
+        <input type="text">
+        <input type="time">
+        <input type="url">
+        <input type="week">
+
     </body>
 
 </html>
